# project_django

./: README.md  apps.py  code.py  core.py  pyproject.toml
main/: urls.py  views.py
myproject/: settings.py  urls.py
